<resources>
    <string name="app_name">HouseWad</string>
    <string name="ListofyourHouses">List of your Houses</string>
    <string name="House">House</string>
    <string name="Owner">Owner</string>
    <string name="Welcome">Welcome</string>
    <string name="NoAccount">No Account?</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Devices">Devices</string>
    <string name="DevicesofHouse">Devices of House</string>
    <string name="Modes">Modes</string>
    <string name="Guest">Guest</string>
    <string name="CreateAccount">Create account</string>
    <string name="Register">Register</string>
    <string name="AlreadyHave">Already Have?</string>
    <string name="AddFriend">Add a friend</string>
    <string name="Stop">Stop</string>
    <string name="selectLanguage">Select Language</string>
    <string name="English">English</string>
    <string name="French">French</string>
    <string name="DevicesOfMode">Devices of Mode</string>
    <string name="TurnOn">Turn On</string>
    <string name="TurnOff">Turn Off</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="SelectModeName">Select Mode Name</string>
    <string name="Secure">Lights Out</string>
</resources>