<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="@color/trans"
        android:onClick="back"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/helvetica"
        android:text="@string/CreateAccount"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="?attr/colorPrimary"
        android:fontFamily="@font/helvetica"
        android:onClick="register"
        android:text="@string/Register"
        android:textColor="@color/white"
        android:textColorLink="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="211dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/Password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editUsername" />

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="209dp"
        android:layout_height="56dp"
        android:layout_marginTop="90dp"
        android:ems="10"
        android:fontFamily="@font/helvetica"
        android:hint="@string/Username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <Button
        android:id="@+id/buttonAlready"
        android:layout_width="113dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/trans"
        android:fontFamily="@font/helvetica"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="back"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/AlreadyHave"
        android:textColor="?android:attr/textColor"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />
</androidx.constraintlayout.widget.ConstraintLayout>